--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   flutter_credit_card: ^4.1.0
+  flutter_stripe: ^9.4.0
 
 dev_dependencies:
   flutter_test:
