--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_credit_card: ^4.1.0
   flutter_stripe: ^9.4.0
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
