--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_credit_card: ^4.1.0
   flutter_stripe: ^9.4.0
   flutter_svg: ^2.0.10+1
+  flutter_paypal_payment: ^1.0.8
 
 dev_dependencies:
   flutter_lints: ^4.0.0
